syntax = "proto3";

// PeerRecord defines the information corresponding to a peer
// container in the overlay network.
message PeerRecord {
	// Endpoint IP is the IP of the container attachment on the
	// given overlay network.
	string endpoint_ip = 1;
	// Endpoint MAC is the mac address of the container attachment
	// on the given overlay network.
	string endpoint_mac = 2;
	// Tunnel Endpoint IP defines the host IP for the host in
	// which this container is running and can be reached by
	// building a tunnel to that host IP.
	string tunnel_endpoint_ip = 3;
}